fix digit wrapping on smaller width screens

--- a/style.css
+++ b/style.css
@@ -72,12 +72,13 @@ img {
 
 .digits {
     display: flex;
-    background-color: black;
+    flex-wrap: wrap;
 }
 
 .one-to-five,
 .six-to-zero {
     display: flex;
+    background-color: black;
 }
 
 .digit {
